--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <nav> <!--Feature Menu-->
             <img src="gfx/logo.svg" id="logo" alt="Idlenauts logo"/>
             <button type="button" class="menuButton" id="townMenuButton" data-tab="town">Town</button>
+            <button type="button" class="menuButton" id="humanResourcesMenuButton" data-tab="humanResources">Personal Management</button>
             <button type="button" class="menuButton" id="researchMenuButton" data-tab="research">Research</button>
             <button type="button" class="menuButton" id="missionControlMenuButton" data-tab="missionControl">Mission Control</button>
             <button type="button" class="menuButton" id="launchMenuButton" data-tab="launch">Mission Launch</button>
@@ -190,6 +191,9 @@
                         <div class="bldgDetails" id="nuclearPowerPlantDetails">
                             Building Details - Nuclear Power Plant
                         </div>
+                </div>
+                <div class="tabcontents" id="humanResources">
+                    test
                 </div>
                 <div class="tabcontents" id="research">
                     <div class="flexRow">
