Added HR Details

--- a/index.html
+++ b/index.html
@@ -193,7 +193,82 @@
                         </div>
                 </div>
                 <div class="tabcontents" id="humanResources">
-                    test
+                    <div class="verticalHRContainer">
+                        <div class="nameHRContainer">Joe Shmoe</div>
+                        <div class="statsHRContainer">
+                            <div class="statsColumnHRContainer">
+                                <div class="singleStatHRContainer">
+                                    <div class="happinessHRNamePlate">Happiness</div>
+                                    <div class="happinessHRStat">100%</div>
+                                </div>
+                                <div class="singleStatHRContainer">
+                                    <div class="hungerHRNamePlate">Hunger</div>
+                                    <div class="hungerHRStat">Sated</div>
+                                </div>
+                                <div class="singleStatHRContainer">
+                                    <div class="productivityHRNamePlate">Productivity</div>
+                                    <div class="productivityHRStat">100%</div>
+                                </div>
+                            </div>
+                            <div class="statsColumnHRContainer">
+                                <div class="singleStatHRContainer">
+                                    <div class="homeLocationHRNamePlate">Home Location</div>
+                                    <div class="homeLocationHRStat">Homeless</div>
+                                </div>
+                                <div class="singleStatHRContainer">
+                                    <div class="hungerHRNamePlate">Hunger</div>
+                                    <div class="hungerHRStat">Sated</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="jobSkillsHRTitlePlate">Job Skills</div>
+                        <div class="jobSkillsHRContainer">
+                            <div class="jobSkillsColumnHRContainer">
+                                <div class="singleJobSkillHRContainer">
+                                    <div class="manualLaborHRNamePlate">Manual Labor</div>
+                                    <div class="manualLaborHRStat">1</div>
+                                </div>
+                                <div class="singleJobSkillHRContainer">
+                                    <div class="artisticHRNamePlate">Artistic</div>
+                                    <div class="artisticHRStat">1</div>
+                                </div>
+                                <div class="singleJobSkillHRContainer">
+                                    <div class="constructionHRNamePlate">Construction</div>
+                                    <div class="constructionHRStat">1</div>
+                                </div>
+                                <div class="singleJobSkillHRContainer">
+                                    <div class="craftingHRNamePlate">Crafting</div>
+                                    <div class="craftingHRStat">1</div>
+                                </div>
+                                <div class="singleJobSkillHRContainer">
+                                    <div class="intellectualHRNamePlate">Intellectual</div>
+                                    <div class="intellectualHRStat">1</div>
+                                </div>
+                            </div>
+                            <div class="jobSkillsColumnHRContainer">
+                                <div class="singleJobSkillHRContainer">
+                                    <div class="farmingHRNamePlate">Farming</div>
+                                    <div class="farmingHRStat">1</div>
+                                </div>
+                                <div class="singleJobSkillHRContainer">
+                                    <div class="animalHandlingHRNamePlate">Animal Handling</div>
+                                    <div class="animalHandlingHRStat">1</div>
+                                </div>
+                                <div class="singleJobSkillHRContainer">
+                                    <div class="cookingHRNamePlate">Cooking</div>
+                                    <div class="cookingHRStat">1</div>
+                                </div>
+                                <div class="singleJobSkillHRContainer">
+                                    <div class="miningHRNamePlate">Mining</div>
+                                    <div class="miningHRStat">1</div>
+                                </div>
+                                <div class="singleJobSkillHRContainer">
+                                    <div class="managementHRNamePlate">Management</div>
+                                    <div class="managementHRStat">1</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="tabcontents" id="research">
                     <div class="flexRow">
