fixed education stat

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                                     <div class="homeLocationHRStat">Homeless</div>
                                 </div>
                                 <div class="singleStatHRContainer">
-                                    <div class="hungerHRNamePlate">Hunger</div>
-                                    <div class="hungerHRStat">Sated</div>
+                                    <div class="educationHRNamePlate">Education</div>
+                                    <div class="educationHRStat">Sated</div>
                                 </div>
                             </div>
                         </div>
